# dane-visual-feature-extraction-worker

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile-GPU  README.md  VggSoundDataModule.py  base_util.py  data_handling.py  data_util.py  docker-compose.yml  docker-entrypoint.sh  example.py  feature_extraction.py  io_util.py  main_data_processor.py  models.py  nn_models.py  output_util.py  provenance.py  pyproject.toml  requirements.txt  save_l3_pairs.py  speed-test.py  speed_test.py  worker.py
.github/: dependabot.yml
.github/workflows/: _build-and-push-ecr.yml  _deploy.yml  _test.yml  build-push-image.yml  check-project.yml  main-branch.yml  manual-deploy.yml  test.yml
config/: config.yml
data/: README.md
data/example_dataset/: demo_audio_0.pt  demo_audio_3.pt  demo_audio_5.pt  demo_audio_7.pt  demo_audio_8.pt  demo_audio_9.pt  demo_video_0.pt  demo_video_3.pt  demo_video_5.pt  demo_video_8.pt
data/input-files/: README.md
data/input-files/test_source_id/metadata/: shot_boundaries_timestamps_ms.txt
data/input-files/test_source_id/spectograms/: 6_24000.npz
data/input-files/test_source_id/spectrograms/: 2_24000.npz  4_24000.npz  7_24000.npz  8_24000.npz  9_24000.npz
data/output-files/: README.md
feature_examples/: models.py
misc/: example.py  get_spectrogram.py  spectogram2img.py
misc/feature_examples/: L3_data_module.py  demo_audio_feat.npy  demo_concat_feat.npy  demo_visual_feat.npy  feat_demo.py  readme.md
misc/frame_and_spectogram_examples/ZQWO_DYnq5Q_000000/: 3.npz
misc/frame_and_spectogram_examples/class_1/ZQWO_DYnq5Q_000000/: 0.npz
misc/spectrogram_example2/: get_sepectogram.py
misc/vector_search_example/: vec_example_np.py
model/: README.md
spectrogram/: VggSoundDataModule.py  get_spectogram.py  save_l3_pairs.py
tests/data/: demo_concat_feat.pt
tests/data/example_dataset/: demo_audio_1.pt  demo_audio_2.pt  demo_audio_4.pt  demo_audio_6.pt  demo_video_1.pt  demo_video_2.pt  demo_video_4.pt  demo_video_6.pt  demo_video_7.pt  demo_video_9.pt
tests/data/metadata/: keyframes_timestamps_ms.txt
tests/data/spectograms/: 1.npz  5.npz
tests/unit/: data_handling_test.py  feature_extraction_test.py  main_data_processor_test.py  models_test.py  nn_models_test.py
vector_search_example/: vec_example_th.py
