[tool.poetry]
name = "dane-visual-feature-extraction-worker"
version = "0.1.0"
description = "Apply feature extraction to (key)fames and audio spectograms to embed video timecodes"
authors = ["Jaap Blom <jblom@beeldengeluid.nl>", "Teng Long <t.long@uva.nl>", "Sara Veldhoen <sveldhoen@beeldengeluid.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
yacs = "^0.1.8"
dane = "^0.3.7"
torch = "2.0.0"         # 2.0.1 yields installation issues
torchvision = "0.15.1"  # 0.15.2 yields installation issues (https://github.com/python-poetry/poetry/issues/4231)
torchaudio = "2.0.0"    # torchaudio 2.0.0 is yanked. Reason for being yanked: Contains an incorrect torch dependency. But torchaudio 2.0.2 depends on torch 2.0.1
#torch = { version = "=2.0.1+cpu", source = "pytorch" } 
#torchvision = "^0.15.2"
#torchaudio="^2.0.2"
tensorflow = "^2.13.0"
tensorflow-io-gcs-filesystem = { version = "*", python = ">=3.10,<3.12" }


#[[tool.poetry.source]] # To be able to install the newest version of Pytorch with poetry, use wheel 
#name = "pytorch"
#url = "https://download.pytorch.org/whl/cpu/"
#priority = "supplemental"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mockito = "^1.3.3"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
black = "^22.10.0"
mypy = "^0.982"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
]
addopts = [
  "--cov",
]

[tool.coverage.run]
omit = [
  "tests/*"
]

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
    | \.venv
    | misc
  )/
)
'''

[tool.mypy]
python_version = "3.10"
exclude = "misc"

[[tool.mypy.overrides]]
module = [
  'dane.*',
  'mockito',
  'yaml',
  'yacs.*',
]
ignore_missing_imports = true
