[tool.poetry]
name = "dane-visual-feature-extraction-worker"
version = "0.1.0"
description = "Apply feature extraction to (key)fames and audio spectrograms to embed video timecodes"
authors = ["Jaap Blom <jblom@beeldengeluid.nl>", "Teng Long <t.long@uva.nl>", "Sara Veldhoen <sveldhoen@beeldengeluid.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
yacs = "^0.1.8"
torch = "2.0.0"         # 2.0.1 yields installation issues
torchvision = "0.18"  # 0.15.2 yields installation issues (https://github.com/python-poetry/poetry/issues/4231)
dane = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mockito = "^1.3.3"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
black = "^22.10.0"
mypy = "^1.11"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
]
addopts = [
  "--cov",
]
markers = [
    "legacy: marks tests as legacy - includes audio processing (deselect with '-m \"not legacy\"')",
    "serial",
]

[tool.coverage.run]
omit = [
  "tests/*"
]

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
    | \.venv
    | misc
  )/
)
'''

[tool.mypy]
python_version = "3.10"
exclude = ["misc",".venv"]

[[tool.mypy.overrides]]
module = [
  'dane.*',
  'mockito',
  'yaml',
  'yacs.*',
]
ignore_missing_imports = true
